manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "dotnet-demoapp"
    labels:
        app: "dotnet-demoapp"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: dotnet-demoapp-goaks.9d8a1bf6e21740a9a39f.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "dotnet-demoapp"
                servicePort: 80
